--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -48,7 +48,7 @@ pre {
 .response {
   border: 1px solid #e2dfdf;
   background: #ffffff;
-  padding: 2%;
+  padding: 1%;
   width: 100%;
   color: rgb(0, 0, 0);
   border-radius: 5px;
@@ -57,7 +57,7 @@ pre {
 .response1 {
   border: 1px solid #e2dfdf;
   background: #ffffff;
-  padding: 2%;
+  padding: 1%;
   width: 100%;
   color: rgb(0, 0, 0);
   border-radius: 5px;
@@ -66,7 +66,7 @@ pre {
 .request {
   border: 1px solid #e2dfdf;
   background: #ffffff;
-  padding: 2%;
+  padding: 1%;
   width: 100%;
   color: rgb(0, 0, 0);
   border-radius: 5px;
@@ -162,4 +162,8 @@ pre {
 
 .scrollbar-primary {
   scrollbar-color: #d4d3d3 #f5f5f5;
+}
+
+.lp-json-pollock {
+  padding-top: 0.5%;
 }
